[package]
name = "witshe"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "witshe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
